# qrust

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
fixtures/error_correction/: test_from_codewords.yml
qrgen/: Cargo.toml
src/: bin.rs  lib.rs
src/qr/: encode.rs  error_correction.rs  image.rs  mod.rs  pattern.rs  version.rs
